# embedded-controls

./: .gitmodules  README.md  index.html
firmware/: .mxproject  CMakeLists.txt  Makefile  README.md  controls-carier-board.ioc  gcc-arm-none-eabi.cmake
firmware/.metadata/: .log4j2.xml  version.ini
firmware/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
firmware/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
firmware/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
firmware/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
firmware/Core/: CMakeLists.txt  README.md
firmware/Core/Inc/: BNO08X.h  main.h  stm32f4xx_hal_conf.h
firmware/Core/Src/: BNO08X.c  gpio.c  main.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  usart.c
firmware/CubeMX/: Makefile  README.md
firmware/Drivers/: CMakeLists.txt
firmware/Lib/: CMakeLists.txt
firmware/Lib/BNO08x/: CMakeLists.txt
firmware/Lib/BNO08x-ll/: BNO08X.c  BNO08X.c.template  BNO08X.h  CMakeLists.txt
firmware/Lib/BNO08x-shtp/: CMakeLists.txt  README.md
firmware/Lib/BNO08x-shtp/inc/: bno08x.h
firmware/Lib/BNO08x-shtp/src/: bno08x.c  bno08x.c.template
firmware/Lib/BNO08x/inc/: bno08x.h
firmware/Lib/BNO08x/src/: bno08x.c  sh2.c
firmware/Lib/ICM42688P/: CMakeLists.txt  icm42688p.c  icm42688p.h  icm42688p_regs.h  icm_driver.c
firmware/Lib/ICM_imu/: icm40609d.h  icm_driver.c  icm_driver.h  icm_regs.h  main.c.template
hardware/Casing-Sensor_3D-print/: README.md  module-case-sensor.f3z
hardware/controls-carier-board/: controls-carier-board.kicad_pcb  controls-carier-board.kicad_pro  controls-carier-board.kicad_sch
hardware/controls-carier-board/output/: controls-carier-board-BOM.csv  controls-carier-board-all-pos.csv  interactive_bom.html
hardware/controls-carrier-board(ICM42688P)/: controls-carrier-board(ICM42688P).ioc  controls-carrier-board(ICM42688P).kicad_pcb  controls-carrier-board(ICM42688P).kicad_pro  controls-carrier-board(ICM42688P).kicad_sch  ibom.config.ini
hardware/controls-carrier-board(ICM42688P)/bom/: ibom.html
hardware/controls-carrier-board(ICM42688P)/output/: controls-carrier-board(ICM42688P)-BOM.csv  controls-carrier-board(ICM42688P)-all-pos.csv
matlab/: data_processing.m
