cmake_minimum_required(VERSION 3.12)

project(embedded-controls-lib-icm42688p C CXX ASM )

#### BNO08X LIBARY ####
set(ICM42688P_LIB_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
set(ICM42688P_LIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} )
set(ICM42688P_LIB_SOURCE_FILES 
    ${ICM42688P_LIB_SOURCE_DIR}/icm42688p.c
    )

add_library(${PROJECT_NAME} INTERFACE )
target_sources(${PROJECT_NAME} INTERFACE 
    ${ICM42688P_LIB_SOURCE_FILES}
    )
target_include_directories(${PROJECT_NAME} INTERFACE 
    ${ICM42688P_LIB_INCLUDE_DIR} 
    )